Sept 25th code update #1: - Modified packge.json to setup Webpack. - Corrected typo in manifest.json. - Service-work.js is work in progress...still troubleshooting. - Updated webpack.config.js

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,18 +1,20 @@
 {
     "icons": [
-      {
-        "src": "icons/icon-192x192.png",
-        "sizes": "192x192",
-        "type": "image/png"
-      },
-      {
-        "src": "icons/icon-512x512.png",
-        "sizes": "512x512",
-        "type": "image/png"
-      }
+        {
+            "src": "icons/icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/icon-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
     ],
     "name": "YWK's Budget Tracker",
     "short_name": "Budget Tracker",
+    "orientation": "portrait",
+    "display": "standalone",
     "start_url": "/",
     "description": "An application that allows you to record and track expenses and deposits."
-  }
+}
